[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://games/ronaldo_vs_messi/scripts/RonaldoVsMessi.gd" id="1"]
[ext_resource type="Script" path="res://games/ronaldo_vs_messi/scripts/PlayerCharacter.gd" id="2"]
[ext_resource type="Script" path="res://games/ronaldo_vs_messi/scripts/Goalkeeper.gd" id="3"]
[ext_resource type="Script" path="res://games/ronaldo_vs_messi/scripts/Ball.gd" id="4"]

[node name="RonaldoVsMessi" type="Node2D"]
script = ExtResource("1")

[node name="PlayerCharacter" type="Node2D" parent="."]
position = Vector2(576, 500)
script = ExtResource("2")

[node name="Goalkeeper" type="CharacterBody2D" parent="."]
position = Vector2(576, 200)
script = ExtResource("3")

[node name="Ball" type="Area2D" parent="."]
position = Vector2(576, 450)
script = ExtResource("4")

[node name="BallStartPosition" type="Marker2D" parent="."]
position = Vector2(576, 450)

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 50.0
text = "Score: 0 - 0"

[node name="ResultLabel" type="Label" parent="."]
offset_left = 400.0
offset_top = 300.0
offset_right = 750.0
offset_bottom = 350.0
text = "Result"
horizontal_alignment = 1
vertical_alignment = 1
